# Markitdown-MCP-actor

./: .gitignore  README.md  pyproject.toml
.actor/: .actorignore  Dockerfile  actor.json  pay_per_event.json
src/: __init__.py  __main__.py  const.py  event_store.py  mcp_gateway.py  models.py
